// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a WysiwygWidget component 1`] = `
<DocumentFragment>
  <div
    class="inline required field help slate_wysiwyg"
    id="field-qwertyu"
  >
    <div
      class="ui grid"
    >
      <div
        class="stretched row"
      >
        <div
          class="four wide column"
        >
          <div
            class="wrapper"
          >
            <label
              for="field-qwertyu"
            >
              My Widget
            </label>
          </div>
        </div>
        <div
          class="eight wide column"
        >
          <div
            class="slate_wysiwyg_box"
            role="textbox"
            style="box-sizing: initial;"
            tabindex="-1"
          >
            <div
              class="slate-editor"
            >
              <div
                contenteditable="true"
                data-gramm="false"
                data-slate-editor="true"
                data-slate-node="value"
                role="textbox"
                spellcheck="false"
                style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
              >
                <span
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      class=""
                      data-slate-leaf="true"
                    >
                      <span
                        data-slate-string="true"
                      >
                        first 
                      </span>
                    </span>
                  </span>
                </span>
                <strong
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      class=""
                      data-slate-leaf="true"
                    >
                      <span
                        data-slate-string="true"
                      >
                        render
                      </span>
                    </span>
                  </span>
                </strong>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="stretched row"
      >
        <div
          class="stretched twelve wide column"
        >
          <p
            class="help"
          >
            My little description.
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders a WysiwygWidget component with working onChange prop 1`] = `
<DocumentFragment>
  <div
    class="inline required field help slate_wysiwyg"
    id="field-qwertyu"
  >
    <div
      class="ui grid"
    >
      <div
        class="stretched row"
      >
        <div
          class="four wide column"
        >
          <div
            class="wrapper"
          >
            <label
              for="field-qwertyu"
            >
              My Widget
            </label>
          </div>
        </div>
        <div
          class="eight wide column"
        >
          <div
            class="slate_wysiwyg_box"
            role="textbox"
            style="box-sizing: initial;"
            tabindex="-1"
          >
            <div
              class="slate-editor"
            >
              <div
                contenteditable="true"
                data-gramm="false"
                data-slate-editor="true"
                data-slate-node="value"
                role="textbox"
                spellcheck="false"
                style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
              >
                <span
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      class=""
                      data-slate-leaf="true"
                    >
                      <span
                        data-slate-string="true"
                      >
                        second 
                      </span>
                    </span>
                  </span>
                </span>
                <strong
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      class=""
                      data-slate-leaf="true"
                    >
                      <span
                        data-slate-string="true"
                      >
                        render
                      </span>
                    </span>
                  </span>
                </strong>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="stretched row"
      >
        <div
          class="stretched twelve wide column"
        >
          <p
            class="help"
          >
            My little description.
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders a WysiwygWidget component with working onChange prop 2`] = `
<DocumentFragment>
  <div
    class="inline required field help slate_wysiwyg"
    id="field-qwertyu"
  >
    <div
      class="ui grid"
    >
      <div
        class="stretched row"
      >
        <div
          class="four wide column"
        >
          <div
            class="wrapper"
          >
            <label
              for="field-qwertyu"
            >
              My Widget
            </label>
          </div>
        </div>
        <div
          class="eight wide column"
        >
          <div
            class="slate_wysiwyg_box"
            role="textbox"
            style="box-sizing: initial;"
            tabindex="-1"
          >
            <div
              class="slate-editor"
            >
              <div
                contenteditable="true"
                data-gramm="false"
                data-slate-editor="true"
                data-slate-node="value"
                role="textbox"
                spellcheck="false"
                style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
              >
                <span
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      class=""
                      data-slate-leaf="true"
                    >
                      <span
                        data-slate-string="true"
                      >
                        second 
                      </span>
                    </span>
                  </span>
                </span>
                <strong
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      class=""
                      data-slate-leaf="true"
                    >
                      <span
                        data-slate-string="true"
                      >
                        renderA
                      </span>
                    </span>
                  </span>
                </strong>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="stretched row"
      >
        <div
          class="stretched twelve wide column"
        >
          <p
            class="help"
          >
            My little description.
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
